1571942916 | 13 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_german.txt,  M content/vrmonitor/translations/vrmonitor_italian.txt,  M content/vrmonitor/translations/vrmonitor_latam.txt,  M content/vrmonitor/translations/vrmonitor_portuguese.txt,  M content/vrmonitor/translations/vrmonitor_ukrainian.txt,  M content/vrmonitor/translations/vrmonitor_vietnamese.txt,  M resources/webhelperoverlays.json,  M resources/webinterface/dashboard/localization/bindingui_english.json,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/steam.inf
https://steamdb.info/patchnotes/4321101/

--- a/content/vrmonitor/translations/vrmonitor_czech.txt
+++ b/content/vrmonitor/translations/vrmonitor_czech.txt
@@ -1131,7 +1131,7 @@
 "[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Po ukončení režimu SteamVR..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
-"Settings_Audio_HDMIGain"	"Povolit redukci signálu na HTC VIVE – HDMI audio"
+"Settings_Audio_HDMIGain"	"Povolit zmenšení dynamického rozsahu signálu HTC VIVE – HDMI audio"
 "[english]Settings_Audio_HDMIGain"	"Enable Gain reduction on VIVE HDMI Audio"
 "Settings_Audio_LeaveAlone"	"(Neměnit zařízení)"
 "[english]Settings_Audio_LeaveAlone"	"(Do not change device)"
